Update project setting
Change-Id: Ie0a2c5b9f704657deab94c6b6d17d1495840f0d0

--- a/SampleCode/ISP/ISP_RS485/KEIL/Nu_Link_Driver.ini
+++ b/SampleCode/ISP/ISP_RS485/KEIL/Nu_Link_Driver.ini
@@ -9,7 +9,7 @@ NuLinkID0=0x18000540
 NuLinkIDs_Count=0x00000001
 [ChipSelect]
 ;ChipName=<NUC1xx|NUC2xx|M05x|N572|Nano100|N512|Mini51|General>
-ChipName=M030G
+ChipName=M091
 [NUC1xx]
 Reset=Autodetect
 MaxClock=1MHz
