--- a/SampleCode/StdDriver/CRC_POLYNOMIAL/KEIL/Nu_Link_Driver.ini
+++ b/SampleCode/StdDriver/CRC_POLYNOMIAL/KEIL/Nu_Link_Driver.ini
@@ -2,7 +2,7 @@
 Nu_LinkVersion=V5.14
 [ChipSelect]
 ;ChipName=<NUC1xx|M05x|N572>
-ChipName=M030G
+ChipName=M091
 [NUC1xx]
 Reset=Autodetect
 MaxClock=1MHz
