--- a/SampleCode/StdDriver/FMC_CRC32/KEIL/Nu_Link_Driver.ini
+++ b/SampleCode/StdDriver/FMC_CRC32/KEIL/Nu_Link_Driver.ini
@@ -9,7 +9,7 @@ NuLinkIDs_Count=0x00000001
 NuLinkID0=0x7788bcdf
 [ChipSelect]
 ;ChipName=<NUC1xx|NUC2xx|M05x|N571|N572|Nano100|N512|Mini51|NUC505|General>
-ChipName=M030G
+ChipName=M091
 [NUC505]
 Connect=0
 Reset=Autodetect
