--- a/SampleCode/StdDriver/SPI_MasterFIFOMode/KEIL/Nu_Link_Driver.ini
+++ b/SampleCode/StdDriver/SPI_MasterFIFOMode/KEIL/Nu_Link_Driver.ini
@@ -10,7 +10,7 @@ NuLinkIDs_Count=0x00000001
 NuLinkID1=0x7788a2b5
 [ChipSelect]
 ;ChipName=<NUC1xx|NUC2xx|M05x|N572|Nano100|N512|Mini51|General>
-ChipName=M030G
+ChipName=M091
 [AU9xxx]
 Reset=Autodetect
 MaxClock=1MHz
