--- a/SampleCode/StdDriver/UART_AutoBaudRate/KEIL/Nu_Link_Driver.ini
+++ b/SampleCode/StdDriver/UART_AutoBaudRate/KEIL/Nu_Link_Driver.ini
@@ -11,7 +11,7 @@ NuLinkID1=0x180005c2
 NuLinkID2=0x7788bcf3
 [ChipSelect]
 ;ChipName=<NUC1xx|NUC2xx|M05x|N572|Nano100|N512|Mini51|General>
-ChipName=M030G
+ChipName=M091
 [AU9xxx]
 Reset=Autodetect
 MaxClock=1MHz
