--- a/SampleCode/StdDriver/UART_AutoFlow/KEIL/Nu_Link_Driver.ini
+++ b/SampleCode/StdDriver/UART_AutoFlow/KEIL/Nu_Link_Driver.ini
@@ -1,25 +1,8 @@
 [Version]
-Nu_LinkVersion=V5.11
+Nu_LinkVersion=V5.25
 [ChipSelect]
 ;ChipName=<NUC1xx|M05x|N572>
-ChipName=M030G
-[NUC1xx]
-Reset=Autodetect
-MaxClock=1MHz
-MemoryVerify=1
-FlashSelect=APROM
-Erase=1
-Program=1
-Verify=1
-ResetAndRun=0
-EnableFlashBreakpoint=1
-RAMForAlgorithmStart=0x20000000
-RAMForAlgorithmSize=0x1000
-ProgramAlgorithm=NUC100_AP_128.FLM
-IOVoltage=3300
-EnableLog=0
-Connect=0
-MemAccessWhileRun=0
+ChipName=M091
 [N572]
 Reset=Autodetect
 MaxClock=1MHz
@@ -32,23 +15,6 @@ EnableFlashBreakpoint=1
 RAMForAlgorithmStart=0x20000000
 RAMForAlgorithmSize=0x2000
 ProgramAlgorithm=N572F064.FLM
-IOVoltage=3300
-EnableLog=0
-Connect=0
-MemAccessWhileRun=0
-[M05x]
-Reset=Autodetect
-MaxClock=1MHz
-MemoryVerify=1
-FlashSelect=APROM
-Erase=1
-Program=1
-Verify=1
-ResetAndRun=0
-EnableFlashBreakpoint=1
-RAMForAlgorithmStart=0x20000000
-RAMForAlgorithmSize=0x800
-ProgramAlgorithm=M0516_AP_64.FLM
 IOVoltage=3300
 EnableLog=0
 Connect=0
@@ -69,31 +35,21 @@ TargetName=General
 EnableLog=0
 Connect=0
 MemAccessWhileRun=0
+TraceConf0=0x00000002
+TraceConf1=0x00b71b00
+TraceConf2=0x00000800
+TraceConf3=0x00000000
+TraceConf4=0x00000001
+TraceConf5=0x00000000
 [Process]
-ProcessID=0x00009ce0
-ProcessCreationTime_L=0xeacb2cb7
-ProcessCreationTime_H=0x01d6355d
-NuLinkID=0x18000540
-NuLinkID0=0x18000540
-NuLinkIDs_Count=0x00000002
+ProcessID=0x00003184
+ProcessCreationTime_L=0xff746e00
+ProcessCreationTime_H=0x01d924d3
+NuLinkID=0x18000012
+NuLinkID0=0x18000012
+NuLinkIDs_Count=0x00000001
 NuLinkID1=0x180005c2
-[NUC2xx]
-Reset=Autodetect
-MaxClock=1MHz
-MemoryVerify=1
-IOVoltage=3300
-FlashSelect=APROM
-Erase=1
-Program=1
-Verify=1
-ResetAndRun=0
-EnableFlashBreakpoint=1
-RAMForAlgorithmStart=0x20000000
-RAMForAlgorithmSize=0x1000
-ProgramAlgorithm=NUC200_AP_128.FLM
-EnableLog=0
-Connect=0
-MemAccessWhileRun=0
+DisableFirmwareUpdate=0
 [N512]
 Reset=Autodetect
 MaxClock=1MHz
@@ -145,79 +101,6 @@ ProgramAlgorithm=Mini51_AP_16.FLM
 EnableLog=0
 Connect=0
 MemAccessWhileRun=0
-[ISD9xxx]
-Reset=Autodetect
-MaxClock=1MHz
-MemoryVerify=1
-IOVoltage=3300
-FlashSelect=APROM
-Erase=1
-Program=1
-Verify=1
-ResetAndRun=0
-EnableFlashBreakpoint=1
-RAMForAlgorithmStart=0x20000000
-RAMForAlgorithmSize=0x3000
-ProgramAlgorithm=ISD9100_AP_145.FLM
-TargetName=ISD9xxx
-EnableLog=0
-Connect=0
-MemAccessWhileRun=0
-[MT5xx]
-Reset=Autodetect
-MaxClock=1MHz
-MemoryVerify=1
-IOVoltage=3300
-FlashSelect=APROM
-Erase=1
-Program=1
-Verify=1
-ResetAndRun=0
-EnableFlashBreakpoint=1
-RAMForAlgorithmStart=0x20000000
-RAMForAlgorithmSize=0x1000
-ProgramAlgorithm=MT500_AP_128.FLM
-EnableLog=0
-[NUC4xx]
-Reset=Autodetect
-MaxClock=1MHz
-MemoryVerify=1
-IOVoltage=3300
-FlashSelect=APROM
-Erase=1
-Program=1
-Verify=1
-ResetAndRun=0
-EnableFlashBreakpoint=1
-EnableLog=0
-RAMForAlgorithmStart=0x20000000
-RAMForAlgorithmSize=0x4000
-ProgramAlgorithm=NUC400_AP_512.FLM
-Connect=0
-MemAccessWhileRun=0
-TraceConf0=0x00000002
-TraceConf1=0x014fb180
-TraceConf2=0x00000800
-TraceConf3=0x00000000
-TraceConf4=0x00000001
-TraceConf5=0x00000000
-[AU9xxx]
-Reset=Autodetect
-MaxClock=1MHz
-MemoryVerify=1
-IOVoltage=3300
-FlashSelect=APROM
-Erase=1
-Program=1
-Verify=1
-ResetAndRun=0
-EnableFlashBreakpoint=0
-EnableLog=0
-RAMForAlgorithmStart=0x20000000
-RAMForAlgorithmSize=0x1000
-ProgramAlgorithm=AU9100_AP_145.FLM
-Connect=0
-MemAccessWhileRun=0
 [NM1500]
 Reset=Autodetect
 MaxClock=1MHz
@@ -250,23 +133,6 @@ EnableLog=0
 RAMForAlgorithmStart=0x20000000
 RAMForAlgorithmSize=0x4000
 ProgramAlgorithm=M451_AP_256.FLM
-Connect=0
-MemAccessWhileRun=0
-[ISD9300]
-Reset=Autodetect
-MaxClock=1MHz
-MemoryVerify=1
-IOVoltage=3300
-FlashSelect=APROM
-Erase=1
-Program=1
-Verify=1
-ResetAndRun=0
-EnableFlashBreakpoint=0
-EnableLog=0
-RAMForAlgorithmStart=0x20000000
-RAMForAlgorithmSize=0x1000
-ProgramAlgorithm=ISD9300_AP_145.FLM
 Connect=0
 MemAccessWhileRun=0
 [M0518]
@@ -522,46 +388,6 @@ MemAccessWhileRun=0
 RAMForAlgorithmStart=0x20000000
 RAMForAlgorithmSize=0x4000
 ProgramAlgorithm=NUC505_SPIFLASH.FLM
-[ISD9000]
-Connect=0
-Reset=Autodetect
-MaxClock=1MHz
-MemoryVerify=0
-IOVoltage=3300
-FlashSelect=APROM
-Erase=1
-Program=1
-Verify=1
-ResetAndRun=0
-EnableFlashBreakpoint=0
-EnableLog=0
-MemAccessWhileRun=0
-RAMForAlgorithmStart=0x20000000
-RAMForAlgorithmSize=0x1000
-ProgramAlgorithm=ISD9000_AP_64.FLM
-[M481]
-Connect=0
-Reset=Autodetect
-MaxClock=1MHz
-MemoryVerify=0
-IOVoltage=3300
-FlashSelect=APROM
-Erase=1
-Program=1
-Verify=1
-ResetAndRun=0
-EnableFlashBreakpoint=1
-EnableLog=0
-MemAccessWhileRun=0
-RAMForAlgorithmStart=0x20000000
-RAMForAlgorithmSize=0x4000
-ProgramAlgorithm=M481_AP_512.FLM
-TraceConf0=0x00000002
-TraceConf1=0x00b71b00
-TraceConf2=0x00000800
-TraceConf3=0x00000000
-TraceConf4=0x00000001
-TraceConf5=0x00000000
 [NM1810]
 Connect=0
 Reset=Autodetect
@@ -613,23 +439,6 @@ MemAccessWhileRun=0
 RAMForAlgorithmStart=0x20000000
 RAMForAlgorithmSize=0x2000
 ProgramAlgorithm=NUC126_AP_256.FLM
-[I9200]
-Connect=0
-Reset=Autodetect
-MaxClock=1MHz
-MemoryVerify=0
-IOVoltage=3300
-FlashSelect=APROM
-Erase=1
-Program=1
-Verify=1
-ResetAndRun=0
-EnableFlashBreakpoint=0
-EnableLog=0
-MemAccessWhileRun=0
-RAMForAlgorithmStart=0x20000000
-RAMForAlgorithmSize=0x1000
-ProgramAlgorithm=I9200_AP_128.FLM
 [I94000]
 Connect=0
 Reset=Autodetect
@@ -664,6 +473,7 @@ MemAccessWhileRun=0
 RAMForAlgorithmStart=0x20000000
 RAMForAlgorithmSize=0x00000800
 ProgramAlgorithm=M031_AP_128.FLM
+Bank=0
 [M2351]
 Connect=0
 Reset=Autodetect
@@ -756,31 +566,6 @@ RAMForAlgorithmStart=0x20000000
 RAMForAlgorithmSize=0x800
 ProgramAlgorithm=M0A21_AP_32.FLM
 CheckDPM=0
-[M2355]
-Connect=0
-Reset=Autodetect
-MaxClock=1MHz
-MemoryVerify=0
-IOVoltage=3300
-FlashSelect=APROM
-Bank=0
-Erase=1
-Program=1
-Verify=1
-ResetAndRun=1
-EnableFlashBreakpoint=0
-EnableLog=0
-MemAccessWhileRun=0
-CheckDPM=0
-RAMForAlgorithmStart=0x20000000
-RAMForAlgorithmSize=0x4000
-ProgramAlgorithm=M2355_AP_1M.FLM
-TraceConf0=0x00000002
-TraceConf1=0x00b71b00
-TraceConf2=0x00000800
-TraceConf3=0x00000000
-TraceConf4=0x00000001
-TraceConf5=0x00000000
 [M261]
 Connect=0
 Reset=Autodetect
@@ -1025,6 +810,432 @@ RAMForAlgorithmSize=0x4000
 ProgramAlgorithm=M471_AP_512.FLM
 TraceConf0=0x00000002
 TraceConf1=0x00b71b00
+TraceConf2=0x00000800
+TraceConf3=0x00000000
+TraceConf4=0x00000001
+TraceConf5=0x00000000
+[AU9100]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=0
+EnableFlashBreakpoint=0
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x1000
+ProgramAlgorithm=AU9100_AP_145.FLM
+[Autodetect]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=0
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x4000
+ProgramAlgorithm=
+[I91000]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=0
+EnableFlashBreakpoint=0
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x1000
+ProgramAlgorithm=ISD9000_AP_64.FLM
+[I91200]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=0
+EnableFlashBreakpoint=0
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x1000
+ProgramAlgorithm=I9200_AP_128.FLM
+[I91300]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=0
+EnableFlashBreakpoint=0
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x1000
+ProgramAlgorithm=ISD9300_AP_145.FLM
+[I91500]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=0
+EnableFlashBreakpoint=0
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x1000
+ProgramAlgorithm=I91500_AP_64.FLM
+[I9160]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=0
+EnableFlashBreakpoint=0
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x1000
+ProgramAlgorithm=ISD9100_AP_145.FLM
+[KM1M4B]
+Connect=0
+Reset=Autodetect
+MaxClock=4MHz
+MemoryVerify=0
+IOVoltage=5000
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=1
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x00004000
+ProgramAlgorithm=KM1M4B_I.FLM
+ProgramAlgorithm1=KM1M4B_D.FLM
+TraceConf0=0x00000002
+TraceConf1=0x00b71b00
+TraceConf2=0x00000800
+TraceConf3=0x00000000
+TraceConf4=0x00000001
+TraceConf5=0x00000000
+EnableKeyfile=0
+Keycode0=0xFFFFFFFF
+Keycode1=0xFFFFFFFF
+Keycode2=0xFFFFFFFF
+Keycode3=0xFFFFFFFF
+[KM1M7A/B]
+Connect=0
+Reset=Autodetect
+MaxClock=4MHz
+MemoryVerify=0
+IOVoltage=5000
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=1
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x00004000
+ProgramAlgorithm=KM1M7AFxxx_I.FLM
+ProgramAlgorithm1=KM1M7AFxxx_D.FLM
+TraceConf0=0x00000002
+TraceConf1=0x00b71b00
+TraceConf2=0x00000800
+TraceConf3=0x00000000
+TraceConf4=0x00000001
+TraceConf5=0x00000000
+EnableKeyfile=0
+Keycode0=0xFFFFFFFF
+Keycode1=0xFFFFFFFF
+Keycode2=0xFFFFFFFF
+Keycode3=0xFFFFFFFF
+[KM1M7C]
+Connect=0
+Reset=Autodetect
+MaxClock=4MHz
+MemoryVerify=0
+IOVoltage=3300
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=1
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x00004000
+ProgramAlgorithm=KM1M7C_I.FLM
+ProgramAlgorithm1=KM1M7C_D0.FLM
+ProgramAlgorithm2=KM1M7C_D1.FLM
+TraceConf0=0x00000002
+TraceConf1=0x00b71b00
+TraceConf2=0x00000800
+TraceConf3=0x00000000
+TraceConf4=0x00000001
+TraceConf5=0x00000000
+EnableKeyfile=0
+Keycode0=0xFFFFFFFF
+Keycode1=0xFFFFFFFF
+Keycode2=0xFFFFFFFF
+Keycode3=0xFFFFFFFF
+[M051]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=0
+EnableFlashBreakpoint=1
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x800
+ProgramAlgorithm=M0516_AP_64.FLM
+[M071]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=0
+EnableFlashBreakpoint=1
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x2000
+ProgramAlgorithm=M071_AP_128.FLM
+[M091]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=1
+EnableFlashBreakpoint=0
+EnableLog=0
+MemAccessWhileRun=0
+DisableTimeoutDetect=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x2000
+ProgramAlgorithm=M091_AP_64.FLM
+[M460]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Bank=0
+SPIM=0
+SPIMOption=0xAD000000
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=1
+EnableFlashBreakpoint=0
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x8000
+ProgramAlgorithm=M460_AP_1M.FLM
+ProgramAlgorithm1=M460_SPIM_AP_1M.FLM
+TraceConf0=0x00000002
+TraceConf1=0x00b71b00
+TraceConf2=0x00000800
+TraceConf3=0x00000000
+TraceConf4=0x00000001
+TraceConf5=0x00000000
+[M480]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=0
+EnableFlashBreakpoint=1
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x4000
+ProgramAlgorithm=M481_AP_512.FLM
+TraceConf0=0x00000002
+TraceConf1=0x00b71b00
+TraceConf2=0x00000800
+TraceConf3=0x00000000
+TraceConf4=0x00000001
+TraceConf5=0x00000000
+[N32F030]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=0
+EnableFlashBreakpoint=1
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x1000
+ProgramAlgorithm=N32F030_AP_64.FLM
+[N574]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=0
+EnableFlashBreakpoint=0
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x1000
+ProgramAlgorithm=N574_AP_512.FLM
+[NM1240]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=0
+EnableFlashBreakpoint=1
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x1000
+ProgramAlgorithm=NM1240_AP_64.FLM
+[NUC100]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=0
+EnableFlashBreakpoint=1
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x1000
+ProgramAlgorithm=NUC100_AP_128.FLM
+[NUC1263]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=0
+EnableFlashBreakpoint=1
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x2000
+ProgramAlgorithm=NUC1263_AP_64.FLM
+[NUC200]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=0
+EnableFlashBreakpoint=1
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x1000
+ProgramAlgorithm=NUC200_AP_128.FLM
+[NUC400]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=0
+EnableFlashBreakpoint=1
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x4000
+ProgramAlgorithm=NUC400_AP_512.FLM
+TraceConf0=0x00000002
+TraceConf1=0x014fb180
 TraceConf2=0x00000800
 TraceConf3=0x00000000
 TraceConf4=0x00000001
