--- a/SampleCode/StdDriver/UART_IrDA/KEIL/UART_IrDA.uvprojx
+++ b/SampleCode/StdDriver/UART_IrDA/KEIL/UART_IrDA.uvprojx
@@ -319,7 +319,7 @@
             <useXO>0</useXO>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>DEBUG_ENABLE_SEMIHOST</Define>
+              <Define></Define>
               <Undefine></Undefine>
               <IncludePath>..\..\..\..\Library\CMSIS\Include;..\..\..\..\Library\Device\Nuvoton\M091\Include;..\..\..\..\Library\StdDriver\inc</IncludePath>
             </VariousControls>
