--- a/SampleCode/StdDriver/UART_SingleWire/KEIL/UART_SingleWire.uvprojx
+++ b/SampleCode/StdDriver/UART_SingleWire/KEIL/UART_SingleWire.uvprojx
@@ -319,7 +319,7 @@
             <useXO>0</useXO>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>DEBUG_ENABLE_SEMIHOST</Define>
+              <Define></Define>
               <Undefine></Undefine>
               <IncludePath>..\..\..\..\Library\Device\Nuvoton\M091\Include;..\..\..\..\Library\StdDriver\inc;..\..\..\..\Library\CMSIS\Include</IncludePath>
             </VariousControls>
