--- a/SampleCode/StdDriver/UART_PDMA/KEIL/UART_PDMA.uvprojx
+++ b/SampleCode/StdDriver/UART_PDMA/KEIL/UART_PDMA.uvprojx
@@ -336,7 +336,7 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define></Define>
+              <Define>DEBUG_ENABLE_SEMIHOST</Define>
               <Undefine></Undefine>
               <IncludePath>..\..\..\..\Library\Device\Nuvoton\M091\Include;..\..\..\..\Library\StdDriver\inc;..\..\..\..\Library\CMSIS\Include</IncludePath>
             </VariousControls>
